# knx-ip-client

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: discover.rs
src/: dp_types.rs  lib.rs  main.rs
src/packets/: addresses.rs  apdu.rs  core.rs  emi.rs  mod.rs  tpdu.rs  tunneling.rs
src/transport/: mod.rs  udp.rs  udp_monitor.rs
