[package]
name = "knx-ip-client"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Niklaus <andrea.niklaus@enc.ch>"]

description = "KNXIP Client library"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.4.3", default-features = true }
enum-primitive-derive = "0.1.2"
env_logger = "0.9.0"
log = "0.4.17"
snafu = "0.7.1"
tokio = { version = "1", features = ["full"]  }
