[package]
name = "knx-ip-client"
version = "0.1.6"
edition = "2021"
authors = ["Andrea Niklaus <andrea.niklaus@enc.ch>"]
license = "MIT"
description = "KNXIP Client library"
repository = "https://github.com/AndreaNiklaus/knx-ip-client"
readme = "README.md"

[dependencies]
bitflags = "2.3.3"
byteorder = { version = "1.4.3", default-features = true }
encoding = "0.2.33"
enum-primitive-derive = "0.1.2"
env_logger = "0.9.0"
log = "0.4.17"
snafu = "0.7.1"
tokio = { version = "1", features = ["full"]  }
tracing = "0.1.40"
